[package]

name = "genesis"
version = "0.0.1"
authors = ["Andrew Kelley <superjoe30@gmail.com>"]

[dependencies.groove]
git = "https://github.com/andrewrk/groove-rs"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs/"
